# libvterm-rs

./: .gitignore  .gitmodules  Cargo.toml  Gemfile  Guardfile  LICENSE  README.md  TODO.md  build.rs
benches/: lib.rs
examples/: unterm.rs
src/: cell.rs  cell2.rs  events.rs  ffi.rs  geom.rs  glyph_info.rs  lib.rs  screen.rs  screen_callbacks.rs  screen_cell.rs  state.rs  state_callbacks.rs  vterm.rs
src/ffi/: cell.rs  glyph_info.rs  mod.rs  parser.rs  screen.rs  state.rs  vterm.rs
tests/: lib.rs  state_callbacks_test.rs  utf8_sampler.txt
tests/rs/: mod.rs  screen.rs  screen_callbacks.rs  state_callbacks.rs
tests/support/: cap_builder.rs  mod.rs
