[package]
authors = ["Andy Hartford <hartforda@gmail.com>"]
description = "FFI bindings to libvterm"
homepage = "https://github.com/ajh/libvterm-rs"
license = "MIT"
name = "vterm-sys"
readme = "README.md"
repository = "https://github.com/ajh/libvterm-rs"
version = "0.0.1"

build = "build.rs"
links = "libvterm"

[dependencies]
log = "0.3"

[build-dependencies]
gcc = "0.3"
glob = "0.2.10"

[dev-dependencies]
docopt = "0.6"
pty = "0.1.5"
regex = "0.1.8"
rustc-serialize = "0.3"
term = "0.2"
termios = "0.2"
